[package]
name = "v2fly_domains"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto_parser = { path = "proto_parser" }
# geosite_converter = { path = "geosite_converter" }
fancy-regex = "0.12.0"
clap = { version = "4.5.47", features = ["cargo"] }
env_logger = "0.11.8"
log = "0.4.28"
converter = { path = "converter" }
rayon = "1.11.0"